# nextjs-rust-session-auth

./: README.md
client/: .env.example  package-lock.json  package.json
client/src/: middleware.ts
client/src/actions/: auth.ts
client/src/actions/_util/: index.ts
client/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
client/src/app/logout/: page.tsx
client/src/app/register/: page.tsx
client/src/asserts/: index.ts
client/src/components/: LoginForm.tsx  LogoutForm.tsx  Navbar.tsx  NavbarLink.tsx  RegisterForm.tsx  loginForm.module.css  logoutForm.module.css  navbar.module.css  navbarLink.module.css
client/src/types/: index.ts
client/src/util/: index.ts
server/: .env.example  Cargo.toml  docker-compose.yml
server/migrations/: 001_CreateUsersTable.sql
server/src/: cors.rs  main.rs
server/src/api/: mod.rs  user_service.rs
server/src/config/: mod.rs
server/src/db/: migrations.rs  mod.rs
server/src/models/: user.rs
server/src/repository/: user_repository.rs
server/src/util/: mod.rs
