[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["secure-cookies"] }
actix-cors = "0.7.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
config = "0.14.1"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.133"
log = "0.4.22"
env_logger = "0.11.5"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "macros", "migrate", "postgres", "uuid", "chrono"] }
validator = { version = "0.19", features = ["derive"] }
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.8.5"

